# gitlab-board

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  github-actions-demo.yml
board/api/: .flake8  gunicorn.conf  gunicorn.conf.py  manage.py  pyproject.toml
board/api/apps/authentication/: __init__.py  apis.py  schemas.py  security.py  services.py
board/api/apps/core/: constants.py  exceptions.py  schemas.py  status.py
board/api/apps/teams/: admin.py  apis.py  apps.py  models.py  schemas.py  services.py
board/api/apps/teams/migrations/: 0001_initial.py  0002_create_default_values.py  0003_alter_column_unique_together_alter_column_index_and_more.py  0004_alter_column_unique_together.py
board/api/apps/users/: admin.py  apis.py  apps.py  models.py  schemas.py
board/api/apps/users/migrations/: 0001_initial.py  0002_create_default_user.py
board/api/board/: apis.py  asgi.py  settings.py  urls.py  wsgi.py
board/frontend/: .eslintrc.cjs  App.svelte  index.html  jsconfig.json  main.js  package.json  vite.config.js
board/frontend/lib/: store.js
board/frontend/lib/api/: auth.js  base.js  board.js  gitlab.js
board/frontend/lib/components/: PriorityLabel.svelte  SubNav.svelte  UserAvatar.svelte
board/frontend/lib/components/board/: IssueType.svelte  IssuesColumn.svelte  IssuesRow.svelte  Label.svelte  PriorityLabel.svelte  UserBoard.svelte
docker/api/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  entrypoint.sh
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
nginx/: board.conf
(+13 files in other folders)
